<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.VerificationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>


            <TextView
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:text="@string/thanks">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_thanks"
                android:layout_gravity="center_horizontal">
            </ImageView>


            <LinearLayout
                android:layout_marginTop="70dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/enter_code">
                </TextView>

                <EditText
                    android:inputType="textEmailAddress"
                    android:textSize="13sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey">
                </EditText>



            </LinearLayout>

            <TextView
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorGrey"
                android:textSize="15sp"
                android:text="@string/activiation_message">
            </TextView>



            <Button
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/code_confirm"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/ripple_main_btn"
                android:textColor="@color/colorWhite">
            </Button>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_gravity="center_horizontal|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorGrey"
                    android:textSize="15sp"
                    android:text="@string/didnt_recieve">
                </TextView>

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_horizontal|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/send_again">
                </TextView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>