<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>

            <TextView
                android:layout_margin="20dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="20sp">
            </TextView>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_about_app"
                android:drawableEnd="@drawable/ic_icon_settings_arrow"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_policy"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usage_policy"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_display"
                android:drawableEnd="@drawable/ic_icon_settings_arrow"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_suggestion"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggestions"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_questions"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableEnd="@drawable/ic_icon_settings_arrow"
                android:drawableStart="@drawable/ic_icon_language"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_share"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <TextView
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_icon_contact_us"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey">
            </View>

            <ImageView
                android:layout_marginTop="90dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo_main">
            </ImageView>

            <TextView
                android:fontFamily="@font/cairo_reqular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGrey"
                android:text="رقم الإصدار 1.01">
            </TextView>

        </LinearLayout>
    </ScrollView>




</LinearLayout>